--- a/templates/cloud-config.yml.tmpl
+++ b/templates/cloud-config.yml.tmpl
@@ -1,3 +1,4 @@
+# see https://docs.papermc.io/misc/java-install
 #cloud-config
 mounts:
   - ["/dev/disk/by-id/scsi-0DO_Volume_minecraftdata", "/minecraft", "ext4","defaults,nofail,discard", "0", "0"]
@@ -6,7 +7,7 @@ users:
 packages_update: true
 packages_upgrade: true
 packages:
-  - openjdk-17-jre-headless
+  - openjdk-21-jre-headless
   - jq
   - git
 runcmd:
@@ -16,4 +17,4 @@ runcmd:
   - curl -fs -o /minecraft/plugins/server-essentials.jar https://dev.bukkit.org/projects/server-essentials-for-bukkit/files/3975569/download
   - echo "eula=true" >/minecraft/eula.txt
   - cd /minecraft
-  - sudo -u minecraft nohup java -Xms2G -Xmx2G -jar /minecraft/paper.jar --nogui &
+  - sudo -u minecraft nohup java -Xms10G -Xmx10G -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true--nogui -jar paper.jar &
